--- a/HouseofApss.html
+++ b/HouseofApss.html
@@ -116,14 +116,13 @@
     <section id="referanslarsayfasi">
                   <div id="annecerceve" class="carousel slide" data-ride="carousel">
                                 <ol class=" carousel-indicators " class="w3-transparent" >
-                                        <div class="pisim" data-target="#annecerceve" data-slide-to="0" class="active">
-                                            <p>VAKIF EMEKLİLİK</p>
-                                        </div>
-                                        <li class="li"></li>   
-                                         <div class="pisim" data-target="#annecerceve" data-slide-to="1"><p>DOMİNOS</p></div>
-                                        <li class="li"></li>
+                                        
+                                        <div class="pisim" data-target="#annecerceve" data-slide-to="0" class="active"><p>VAKIF EMEKLİLİK</p></div> 
+                                        <li></li>
+                                        <div class="pisim" data-target="#annecerceve" data-slide-to="1"><p>DOMİNOS</p></div>
+                                        <li ></li>
                                         <div class="pisim" data-target="#annecerceve" data-slide-to="2"><p>RECKİTT</p></div>
-                                        <li class="li"></li>
+                                        <li ></li>
                                 </ol> 
                       <div class="carousel-inner">
                           <div class="carousel-item active">
