--- a/created iframes/reckitt.html
+++ b/created iframes/reckitt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="HouseOfApps.css">
+    <link rel="stylesheet" href="/HouseOfApps.css">
     <title>Document</title>
 </head>
 <body>
