--- a/HouseofApss.html
+++ b/HouseofApss.html
@@ -25,13 +25,13 @@
             <li><a class="sectionlinkleri" href="https://">BLOG </a></li>
         </ul>
         <a href="">
-            <img src="/h.app.foto/houseofapps.png" id="logo">
+            <img src="../h.app.foto/houseofapps.png" id="logo">
         </a>
         <div class="sosyalmedya">
             <a href="https://twitter.com/houseofappsinfo" id="twitter" target="_blank">
-            <img src="/h.app.foto/twitter-logo.png" alt="bulunamadı"></a>
+            <img src="../h.app.foto/twitter-logo.png" alt="bulunamadı"></a>
             <a href="https://www.linkedin.com/company/5184691" id="linkedin" target="_blank">
-            <img src="/h.app.foto/linkedin-logo.png" alt="bulunamadı"></a>
+            <img src="../h.app.foto/linkedin-logo.png" alt="bulunamadı"></a>
         </div></nav>
     </section>
     <section id="bizkimizsayfasi">
@@ -53,18 +53,18 @@
                  APPLICATION.</p></div>            
             </div>
             <div id="timeline1"class="timeline">
-                <div data-aos="zoom-in" id="timelineiciimg"><img src="/h.app.foto/mobile.png" alt="bulunamadı"></div>
+                <div data-aos="zoom-in" id="timelineiciimg"><img src="../h.app.foto/mobile.png" alt="bulunamadı"></div>
             </div>
             <div  class="resim" id="ikiiphone">
-               <div data-aos="fade-up-left" id="ikiiphoneimg"><img src="/h.app.foto/work1.png" alt="bulunamadı"></div> 
+               <div data-aos="fade-up-left" id="ikiiphoneimg"><img src="../h.app.foto/work1.png" alt="bulunamadı"></div> 
             </div>
         </div>
         <div class="bölmelidivler">
             <div  class="resim" id="bilgisayar">
-                <div data-aos="fade-up-right" class="animation1"><img src="/h.app.foto/work3.png" alt=""></div>
+                <div data-aos="fade-up-right" class="animation1"><img src="../h.app.foto/work3.png" alt=""></div>
             </div>
             <div id="timeline2"class="timeline">
-                <div data-aos="zoom-in" id="timelineiciimg"><img src="/h.app.foto/web.png" alt=""></div>
+                <div data-aos="zoom-in" id="timelineiciimg"><img src="../h.app.foto/web.png" alt=""></div>
             </div>
             
             <div  id="houseofweb" class="yazi">
@@ -91,18 +91,18 @@
 
             </div>
             <div class="timeline"> 
-                <div data-aos="zoom-in" id="timelineiciimg" id="experiencelogo"><img src="/h.app.foto/experience.png" alt=""></div>
+                <div data-aos="zoom-in" id="timelineiciimg" id="experiencelogo"><img src="../h.app.foto/experience.png" alt=""></div>
             </div>
             <div  class="resim" id="tablet">
-                <div data-aos="fade-up-left" class="animation2" id="tabletimg"><img src="/h.app.foto/work2.png" alt="bulunamadı"></div>
+                <div data-aos="fade-up-left" class="animation2" id="tabletimg"><img src="../h.app.foto/work2.png" alt="bulunamadı"></div>
             </div>
         </div>
         <div class="bölmelidivler">
             <div  class="resim" id="acikbilgisayar">
-                <div data-aos="fade-up-right" class="animation1"><img src="/h.app.foto/work4.png" alt=""></div>
+                <div data-aos="fade-up-right" class="animation1"><img src="../h.app.foto/work4.png" alt=""></div>
             </div>
             <div class="timeline">
-                <div data-aos="zoom-in" id="timelineiciimg"><img src="/h.app.foto/tech.png" alt=""></div>
+                <div data-aos="zoom-in" id="timelineiciimg"><img src="../h.app.foto/tech.png" alt=""></div>
             </div>
            
             <div  class="yazi" id="houseofdigital">
@@ -205,9 +205,9 @@
                         </ul>
                         <div class=" sosyalmedya" id="sosyalmedyason">
                                 <a href="https://twitter.com/houseofappsinfo" id="twitter" target="_blank">
-                                <img src="/h.app.foto/twitter-logo.png" alt="bulunamadı"></a>
+                                <img src="../h.app.foto/twitter-logo.png" alt="bulunamadı"></a>
                                 <a href="https://www.linkedin.com/company/5184691" id="linkedin" target="_blank">
-                                <img src="/h.app.foto/linkedin-logo.png" alt="bulunamadı"></a>
+                                <img src="../h.app.foto/linkedin-logo.png" alt="bulunamadı"></a>
                             </div>
                     </nav>
               </div> 
