--- a/created iframes/reckitt.html
+++ b/created iframes/reckitt.html
@@ -10,14 +10,14 @@
 <body>
     <div class="slaytcercevesi" id="reckitt">
         <div class="cerceveicidivler" id="reckittslayt1">
-            <img class="logolar" src="/h.app.foto/rb-icon.png" alt="">
+            <img class="logolar" src="../h.app.foto/rb-icon.png" alt="">
             <div class="slaytyazilari">
                  <h2>RECKITT BENCKISER</h2>
                  <P>AN INTERNAL BUSINESS APPLICATION FOR RECKITT 
                     BENCKISER.</P></div>
                     <div id="rblink" class="linkdiv">
                         <a class="linkyazisi" href="www.rb.com" target="_blank">
-                            <img src="/h.app.foto/website.png" alt="">WEBSITE
+                            <img src="../h.app.foto/website.png" alt="">WEBSITE
                         </a></div>
         </div>
         
