--- a/created iframes/dominosfoto.html
+++ b/created iframes/dominosfoto.html
@@ -11,7 +11,7 @@
     <div class="slaytcercevesi" id="dominos">
                      
         <div class="cerceveicidivler" id="dominosslayt1">
-      <img class="logolar" src="/h.app.foto/dominos-icon.png" alt="bulunamadı">
+      <img class="logolar" src="../h.app.foto/dominos-icon.png" alt="bulunamadı">
         <div class="slaytyazilari"><p><h2>DOMİNO'S CEPCİNİ</h2> 
            CEPCINI IS AN IN HOUSE BUSINESS INTELLIGENCE MOBILE SOLUTION FOR DOMINO'S PIZZA. 
           OPERATIONS DO NOT STOP WHEN YOU LEAVE THE OFFICE. 
@@ -20,11 +20,11 @@
           APP, CRITICAL INTELLIGENCE IS AT YOUR FINGERTIPS
            WHEN AND WHERE IT IS NEEDED MOST.
            (APPLICATIONS ARE RE-DEVELOPED WITH REACT-NATIVE TECHNOLOGY)</p></div>
-           <div class="linkdiv" id="dominoslink"><img src="/h.app.foto/website.png" alt=""><a class="linkyazisi" href="https://www.dominos.com.tr/" target="_blank"> WEBSİTE</a></div>
+           <div class="linkdiv" id="dominoslink"><img src="../h.app.foto/website.png" alt=""><a class="linkyazisi" href="https://www.dominos.com.tr/" target="_blank"> WEBSİTE</a></div>
          </div>
            <div class="cerceveicidivler" id="dominosslayt2">
-               <img src="/h.app.foto/dominos-screenshot.png" alt="">
-              <div class="slayttelefongorunumleri"><img src="/h.app.foto/dominos-screenshot-phone.png" alt=""></div>
+               <img src="../h.app.foto/dominos-screenshot.png" alt="">
+              <div class="slayttelefongorunumleri"><img src="../h.app.foto/dominos-screenshot-phone.png" alt=""></div>
            </div>
            <div class="seffafdiv"></div>
        </div>
