--- a/created iframes/vakiffoto.html
+++ b/created iframes/vakiffoto.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="/HouseOfApps.css">
 </head>
 <body>
-        <div class="slaytcercevesi" id="vakif">
-            
+        <div >           
                 <div class="cerceveicidivler" id="vakifemeklilikslayt1">
                     <img class="logolar" src="../h.app.foto/vakif-logo.png" alt="bulunamadı">
                     <div class="slaytyazilari">
@@ -29,7 +28,8 @@
                 <div class="cerceveicidivler" id="vakifemeklilikslayt2">
                     <div class="slayttelefongorunumleri"><img src="../h.app.foto/vakıf-tel.png" alt=""></div>                
                 </div>
-                <div class="seffafdiv"></div>
-            </div>
+                    <div class="seffafdiv"></div>
+        </div>
+        
 </body>
 </html>
