--- a/HouseofApss.html
+++ b/HouseofApss.html
@@ -151,7 +151,7 @@
 
     <section >
                   <div  class="carousel slide " data-ride="carousel">
-                                <ol class=" carousel-indicators"  >
+                                <ol class=" carousel-indicators" class="w3-transparent" >
                                         
                                         <div style="cursor:pointer"  data-target="#annecerceve" data-slide-to="0" class="active"><p>VAKIF EMEKLİLİK</p></div> 
                                         <li></li>
@@ -173,13 +173,13 @@
                                 <iframe class="iframe" src="created iframes\reckitt.html" frameborder="0" height="650px" width="100%" scrolling="no" ></iframe> 
                             </div>
                         </div>  
-                        <a class="arrow left carousel-control-prev" href="#annecerceve" role="button" data-slide="prev">
+                        <a class="arrow left" href="#annecerceve" role="button" data-slide="prev">
                                 <svg  width="60px" height="80px" viewBox="0 0 50 80">
                                         <polyline fill="none" stroke="#FFFFFF" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="
                                         45.63,75.8 0.375,38.087 45.63,0.375 "/>
                                       </svg>  
                               </a>
-                              <a  href="#annecerceve" role="button" data-slide="next">
+                              <a class="arrow right" href="#annecerceve" role="button" data-slide="next">
                                     <svg width="60px" height="80px" viewBox="0 0 50 80" xml:space="preserve">
                                             <polyline fill="none" stroke="#FFFFFF" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="
                                             0.375,0.375 45.63,38.087 0.375,75.8 "/>
