--- a/created iframes/dominosfoto.html
+++ b/created iframes/dominosfoto.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="/HouseOfApps.css">
 </head>
 <body>
-    <div class="slaytcercevesi row" id="dominos">
+    <div class="slaytcercevesi row">
                      
         <div class="cerceveicidivler col-lg-6 col-sm-12 col-md-12 dominoss" >
           <div style="text-align: center;">
-              <img class="logolar pt-3" src="../h.app.foto/dominos-icon.png" alt="bulunamadı">
+              <img class="pt-3" src="../h.app.foto/dominos-icon.png" alt="bulunamadı">
             </div>
         <div style="text-align: center;" class="slaytyazilari"><p><h2>DOMİNO'S CEPCİNİ</h2> 
            CEPCINI IS AN IN HOUSE BUSINESS INTELLIGENCE MOBILE SOLUTION FOR DOMINO'S PIZZA. 
@@ -26,11 +26,11 @@
           APP, CRITICAL INTELLIGENCE IS AT YOUR FINGERTIPS
            WHEN AND WHERE IT IS NEEDED MOST.
            (APPLICATIONS ARE RE-DEVELOPED WITH REACT-NATIVE TECHNOLOGY)</p></div>
-           <div class="linkdiv" id="dominoslink" style="text-align: center;"><img src="../h.app.foto/website.png" alt=""><a class="linkyazisi" href="https://www.dominos.com.tr/" target="_blank"> WEBSİTE</a></div>
+           <div style="text-align: center;"><img src="../h.app.foto/website.png" alt=""><a class="linkyazisi" href="https://www.dominos.com.tr/" target="_blank"> WEBSİTE</a></div>
          </div>
            <div class="cerceveicidivler col-lg-6 d-none d-lg-block dominoss" style="text-align: center;" >
                <div><img src="../h.app.foto/dominos-screenshot.png" alt=""></div>
-               <div class="slayttelefongorunumleri"><img src="../h.app.foto/dominos-screenshot-phone.png" alt=""></div>
+               <div><img src="../h.app.foto/dominos-screenshot-phone.png" alt=""></div>
               </div>
           
        </div>
