--- a/created iframes/vakiffoto.html
+++ b/created iframes/vakiffoto.html
@@ -31,7 +31,7 @@
                 </div>                   
               
                 <div  class="cerceveicidivler col-lg-6 d-none d-lg-block vakif" >
-                    <div class="slayttelefongorunumleri" style="text-align: center;"><img src="../h.app.foto/vakıf-tel.png" alt=""></div>                
+                    <div style="text-align: center;"><img src="../h.app.foto/vakıf-tel.png" alt=""></div>                
                 </div>
         </div>
                 <div class="seffafdiv"></div>
