--- a/created iframes/reckitt.html
+++ b/created iframes/reckitt.html
@@ -14,14 +14,14 @@
 <body>
     <div class=" row">
         <div class="cerceveicidivler col-lg-6 col-sm-12 col-md-12 reckitt" >
-            <div style="text-align: center;" class="pt-3"> <img class="logolar" src="../h.app.foto/rb-icon.png" alt=""></div>
+            <div style="text-align: center;" class="pt-3"> <img  src="../h.app.foto/rb-icon.png" alt=""></div>
             
             <div class="slaytyazilari" style="text-align: center;">
                  <h2>RECKITT BENCKISER</h2>
                  <P>AN INTERNAL BUSINESS APPLICATION FOR RECKITT 
                     BENCKISER.</P></div>
 
-            <div id="rblink" class="linkdiv" style="text-align: center;">
+            <div style="text-align: center;">
                     <a class="linkyazisi" href="www.rb.com" target="_blank">
                         <img src="../h.app.foto/website.png" alt="">WEBSITE
                         </a></div>
