--- a/HouseofApss.html
+++ b/HouseofApss.html
@@ -24,12 +24,12 @@
             </div> 
        
         <div  style="text-align: center;margin-left: 0px ;float:left ;width: 70%; display: inline-block;" >
-        <nav  style="border: solid 2px red;">
-        <ul class="menuler" type="none" style="border: solid 2px pink; cursor:pointer">
-            <li style="border: solid 2px green;" ><a class="sectionlinkleri " href="#bizkimizsayfasi">WHO WE ARE   </a></li>
-            <li style="border: solid 2px purple; "><a class="sectionlinkleri " href="#referanslarsayfasi">OUR REFERENCES   </a></li>
-            <li style="border: solid 2px green; "><a class="sectionlinkleri " href="#iletisimsayfasi">CONTACT US   </a></li>
-            <li style="border: solid 2px green; "><a class="sectionlinkleri " href="https://">BLOG </a></li>
+        <nav  >
+        <ul class="menuler" type="none" style="cursor:pointer">
+            <li  ><a class="sectionlinkleri " href="#bizkimizsayfasi">WHO WE ARE   </a></li>
+            <li ><a class="sectionlinkleri " href="#referanslarsayfasi">OUR REFERENCES   </a></li>
+            <li ><a class="sectionlinkleri " href="#iletisimsayfasi">CONTACT US   </a></li>
+            <li ><a class="sectionlinkleri " href="https://">BLOG </a></li>
         </ul>
        </nav>
        </div> 
@@ -153,11 +153,11 @@
                   <div  class="carousel slide " data-ride="carousel">
                                 <ol class=" carousel-indicators" class="w3-transparent" >
                                         
-                                        <div style="cursor:pointer"  data-target="#annecerceve" data-slide-to="0" class="active"><p>VAKIF EMEKLİLİK</p></div> 
+                                        <div class="carouseldiv" style="cursor:pointer"  data-target="#annecerceve" data-slide-to="0" class="active"><p>VAKIF EMEKLİLİK</p></div> 
                                         <li></li>
-                                        <div style=" cursor:pointer"  data-target="#annecerceve" data-slide-to="1"><p>DOMİNOS</p></div>
+                                        <div class="carouseldiv" style=" cursor:pointer"  data-target="#annecerceve" data-slide-to="1"><p>DOMİNOS</p></div>
                                         <li ></li>
-                                        <div style=" cursor:pointer"  data-target="#annecerceve" data-slide-to="2"><p>RECKİTT</p></div>
+                                        <div class="carouseldiv" style=" cursor:pointer"  data-target="#annecerceve" data-slide-to="2"><p>RECKİTT</p></div>
                                         <li ></li>
                                 </ol> 
                       <div class="carousel-inner">
@@ -246,7 +246,7 @@
       </div> 
       </div> 
            <div style="width: 15%; display: inline-block; float:left" >
-               <div  style="border: 2px solid rebeccapurple; width: 20%; display: inline-block; float: left;">
+               <div  style="width: 20%; display: inline-block; float: left;">
                        <a href="https://twitter.com/houseofappsinfo"  target="_blank">
                            <img style="width: 100%; height: 100%; object-fit: contain;" src="./h.app.foto/twitter-logo.png" alt="bulunamadı"></a>
                </div>
